--- a/lang/lang.de.yml
+++ b/lang/lang.de.yml
@@ -54,7 +54,8 @@ group:
   no_groups: Hier gibt es noch keine Arbeitsgruppen
   quit_name: Bezirk/Team %name% verlassen
   quit: Verlassen
-  really_quit_name: Möchtest Du wirklich den Bezirk bzw. das Team %name% verlassen?
+  really_quit_name: Möchtest Du wirklich den Bezirk bzw. die Arbeitsgruppe %name% verlassen?
+  quitting_home_district_warning: Sollte dies dein Stammbezirk sein, so verlierst du deine Verifizierung und musst dich nach Neuauswahl beim Botschafter melden!
   delete_group_sure: Soll die Arbeitsgruppe/der Bezirk {groupName} wirklich gelöscht werden?
 
 legal:
