--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -300,7 +300,10 @@ storeedit:
     prefetchtime: Kalender-Slots jeweils wie lange im Voraus erzeugen?
     week: 1 Woche
     weeks: '{count} Wochen'
-    teamstatus: Teamstatus
+    teamStatus: Teamstatus
+    teamStatus0: Dieses Team ist voll und sucht z.Z. keine weiteren Helfer
+    teamStatus1: Es werden noch Helfer gesucht
+    teamStatus2: Es werden dringend noch Helfer gesucht
     foodTypes: Welche Lebensmittel werden abgeholt?
   coop:
     header: Kooperation
