--- a/lang/lang.de.yml
+++ b/lang/lang.de.yml
@@ -512,7 +512,7 @@ menu:
     statistics: Statistik
     transparency: Transparenz
     dataprivacy: Datenschutz
-    changelog: Changelog
+    release-notes: Release Notes
     stores: Betriebe
     fs: Foodsaver
     ids: Ausweise
