--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -274,8 +274,7 @@ store:
   may_not_referred_to_in_public: Bitte diesen Betrieb niemals öffentlich (z.B. bei Essenskörben, Facebook oder Presseanfragen) nennen!
   address: Adresse
   my_last_pickup: Meine letzte Abholung
-  days: Tagen
-  days_before: vor
+  days_ago: "(vor {howMany} Tagen)"
   team_conversation_name: 'Team {name}'
   springer_conversation_name: 'Springer {name}'
 
