StoreEdit: Add new store status "does no longer exist" #786
stores in this state are hidden on the map (and the region admin tool)

+ refactor store trafficlight, some related translations

removes the separate UI to change team status from storeview,
recommended to use the regular store-edit screen for that now

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -748,6 +748,12 @@ storestatus:
   4: Will nicht kooperieren
   5: Betrieb kooperiert bereits
   6: Spendet an Tafel etc. und wirft nichts weg
+  7: Betrieb existiert nicht mehr
+  light: |
+    <span class='sr-only'>{statusNum}</span>
+    <a href='#' onclick='return false;' class='store-trafficlight ampel-{color}' title='{title}'>
+    <span>&nbsp;</span></a>
+    <span>{title}</span>
 
 storelist:
  entered: "Eingetragen:"
