StoreEdit: feedback when saving, use `trim` prop instead of model.trim
Vue doesn't support `.trim` custom component models, as explained in
https://bootstrap-vue.org/docs/components/form-input#v-model-modifiers

but for some reason, this is still only partially working:
- leading spaces are trimmed but trailing spaces are not
- more importantly, the change event apparently fires before trim?!

--- a/translations/messages.de.yml
+++ b/translations/messages.de.yml
@@ -191,6 +191,7 @@ back: Zurück
 options: Optionen
 error_unexpected: Es ist ein Fehler aufgetreten
 success: Erfolgreich abgeschlossen
+saved: Gespeichert
 delete: Löschen
 notice: Hinweis!
 
